<resources>
    <string name="app_name">Asteriods</string>
    <string name="asteroids">AsteRoids</string>
    <string name="jugar">Jugar</string>
    <string name="configurar">Configurar</string>
    <string name="sobre">Sobre</string>
    <string name="puntuacion">Puntuacion</string>
    <string name="sobre_info" translatable="false">
        <h1>Autor:</h1> Ivan Carreras
        <h1>Curso: </h1> 2º DAM
    </string>
</resources>