<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/degradat">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="72dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/asteroids"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="221dp"
        android:layout_height="62dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="92dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/jugar"
        android:textColorLink="#2196F3"
        android:textSize="24sp"
        app:cornerRadius="50px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="221dp"
        android:layout_height="62dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="92dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/configurar"
        android:textColorLink="#2196F3"
        android:textSize="24sp"
        app:cornerRadius="50px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="221dp"
        android:layout_height="62dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="92dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/sobre"
        android:textColorLink="#2196F3"
        android:textSize="24sp"
        app:cornerRadius="50px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="221dp"
        android:layout_height="62dp"
        android:layout_marginTop="456dp"
        android:layout_marginEnd="92dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/puntuacion"
        android:textColorLink="#2196F3"
        android:textSize="24sp"
        app:cornerRadius="50px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>